backends/drm: release the scanout buffer of virtual layers in beginFrame

Otherwise we just keep the client buffer until the next scanout cycle, which is
quite broken.

BUG: 523353